# OrbInspect

./: .gitignore  AGENTS.md  PHASE_STATUS.md  PROJECT_PLAN.md  README.md  SOOA_REVISION_REPORT.md  codex_sooa_manuscript_revision_plan_with_code_sim.md  pytest.ini
OrbInspectLatex/: IEEEtaes.cls  Makefile  README.md  install_tex_ubuntu.sh  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib
OrbInspectLatex/algorithms/: offline_planner.tex
OrbInspectLatex/scripts/: generate_mesh_trajectory_figures.py
OrbInspectLatex/sections/: 01_introduction.tex  02_related_work.tex  03_system_and_mission.tex  04_problem_formulation.tex  05_algorithm.tex  06_simulation_protocol.tex  07_expected_results.tex  07_online_execution.tex  08_limitations.tex  09_conclusion.tex
docs/: advanced_safe_planner.md
scripts/: plot_planned_vs_executed.py  run_full_closed_loop_comparison.py
src/orbinspect_bringup/: README.md  package.xml  setup.cfg  setup.py
src/orbinspect_bringup/config/: bringup_default.yaml
src/orbinspect_bringup/launch/: demo_basilisk_backend.launch.py  demo_coverage.launch.py  demo_fixed_waypoints.launch.py  demo_gazebo.launch.py  demo_greedy_inspection.launch.py  demo_proposed_trajectory_validation.launch.py  demo_real_iss_trajectory.launch.py  demo_rviz.launch.py  demo_safety_filter.launch.py  paper_experiment.launch.py  record_full_iss_chaser_view.launch.py  record_real_iss_chaser_view.launch.py
src/orbinspect_bringup/test/: test_flake8.py  test_pep257.py
src/orbinspect_control/: README.md  package.xml  setup.cfg  setup.py
src/orbinspect_description/: CMakeLists.txt  README.md  package.xml
src/orbinspect_dynamics/: README.md  package.xml  setup.cfg  setup.py
src/orbinspect_eval/: README.md  package.xml  setup.cfg  setup.py
src/orbinspect_gazebo/: README.md  package.xml  setup.cfg  setup.py
src/orbinspect_gazebo/config/: ros_gz_bridge.yaml
src/orbinspect_gazebo/launch/: gazebo_iss.launch.py  gazebo_iss_real.launch.py  spawn_chaser.launch.py  spawn_cubesat_chaser.launch.py  spawn_follow_camera.launch.py
src/orbinspect_gazebo/orbinspect_gazebo/: chaser_pose_follower.py  follow_camera_pose_node.py  image_video_recorder.py
src/orbinspect_gazebo/test/: test_chaser_pose_follower.py  test_flake8.py  test_follow_camera_pose_node.py  test_image_video_recorder.py
src/orbinspect_gazebo/worlds/: iss_external_empty.sdf  iss_real_visual.sdf
src/orbinspect_guidance/: README.md  package.xml  setup.cfg  setup.py
src/orbinspect_interfaces/: CMakeLists.txt  README.md  package.xml
src/orbinspect_mission/: README.md  package.xml  setup.cfg  setup.py
src/orbinspect_perception/: README.md  package.xml  setup.cfg  setup.py
src/orbinspect_safety/: README.md  package.xml  setup.cfg  setup.py
src/orbinspect_safety/config/: safety.yaml
src/orbinspect_safety/orbinspect_safety/: cbf_filter.py  collision_checker.py  keepout_zones.py  primitive_geometry.py  projection_filter.py  safety_filter_node.py  safety_monitor_node.py
src/orbinspect_safety/test/: test_collision_checker.py  test_flake8.py  test_pep257.py
src/orbinspect_utils/: README.md  package.xml  setup.cfg  setup.py
test/: test_workspace_skeleton.py
(+145 files in other folders)
